--- a/server/src/back-office/views/prenotations.html
+++ b/server/src/back-office/views/prenotations.html
@@ -16,8 +16,213 @@
     <script>
       $(document).ready(function () {
         $("#sidebar").load("../tabs/sidebar.html");
-        $("#list").load("../tabs/prenotation-list.html");
+        //$("#list").load("../tabs/prenotation-list.html");
       });
+    </script>
+    <script>
+      let pts = [];
+      let totPrenotations = 0;
+      const getPts = async () => {
+        var ret = await fetch("http://localhost:5000/api/prenotation", {
+          method: "GET",
+          //body: {},
+          credentials: "include",
+        });
+        pts = await ret.json();
+        await loadList();
+      };
+      //TODO non funziona
+      const deletePt = async (id) => {
+        var ret = await fetch("http://localhost:5000/api/prenotation/" + id, {
+          method: "DELETE",
+          body: {},
+          credentials: "include",
+        });
+        window.location.reload();
+      };
+      const filterStartTime = (time) => {
+        let hours = +time.substring(11, 13) + 1;
+        time = hours > 12 ? (hours % 12) + "pm" : hours + "am";
+        return time;
+      };
+
+      const filterList = () => {
+        let reqPrenotation = $("#filterPrenotationId").val();
+        let reqCompany = $("#filterCompanyId").val();
+        let reqCustomer = $("#filterUserId").val();
+        let reqSchedule = $("#filterSchedule").val();
+        let reqCity = $("#filterCity").val();
+        let comparePrenotation = 0;
+        let compareCompany = 0;
+        let compareCustomer = 0;
+        let compareSchedule = 0;
+        let compareCity = 0;
+        let tmp = "";
+        $(document).ready(function () {
+          if (pts !== undefined) {
+            let index = 0;
+            pts.map((item) => {
+              comparePrenotation =
+                reqPrenotation === "" ? 0 : reqPrenotation === item._id ? 0 : 1;
+              compareCompany =
+                reqCompany === "" ? 0 : reqCompany === item.company ? 0 : 1;
+              compareCustomer =
+                reqCustomer === "" ? 0 : reqCustomer === item.user ? 0 : 1;
+              compareSchedule =
+                reqSchedule === ""
+                  ? 0
+                  : reqSchedule === filterStartTime(item.start)
+                  ? 0
+                  : 1;
+              compareCity =
+                reqCity === ""
+                  ? 0
+                  : reqCity.toLowerCase() === item.place.toLowerCase()
+                  ? 0
+                  : 1;
+              if (
+                comparePrenotation +
+                  compareCompany +
+                  compareCustomer +
+                  compareSchedule +
+                  compareCity ===
+                0
+              ) {
+                tmp += makeItemPrenotation(
+                  index,
+                  item._id,
+                  item.place,
+                  item.start,
+                  item.user,
+                  item.company
+                );
+                index++;
+                totPrenotations = index;
+              }
+            });
+          }
+          tmp !== ""
+            ? $("#ptsList").html(tmp)
+            : $("#ptsList").html(
+                `<p class="mt-4 font-semibold">No prenotations founded with these filters</p>`
+              );
+          $("#totPrenotations").html("TOTAL RESULTS: " + totPrenotations);
+          totPrenotations = 0;
+        });
+      };
+
+      const formatTime = (time) => {
+        let hours = +time.substring(11, 13) + 1;
+        time = hours > 12 ? (hours % 12) + "pm" : hours + "am";
+        time += " - ";
+        time += hours + 1 > 12 ? ((hours + 1) % 12) + "pm" : hours + 1 + "am";
+        return time;
+      };
+
+      const makeItemPrenotation = (index, id, place, start, user, company) => {
+        return (
+          `
+          <div class="flex flex-row my-3">
+            <span class="mr-1">` +
+          (index + 1) +
+          `.
+              </span>
+            <div class="flex flex-row flex-1 bg-white/50 p-2 rounded">
+              <div class="flex flex-col">
+                <div><span class="font-semibold">Prenotation id: </span>
+                  <button class="btn" onclick="copy(this)">` +
+          id +
+          `
+            <i class="fa fa-copy"></i></button>
+                </div>
+                <div><span class="font-semibold">City: </span>` +
+          place +
+          `
+                </div>
+                <div><span class="font-semibold">Date: </span>` +
+          start.substring(0, 10) +
+          `
+                </div>
+                <div><span class="font-semibold">Schedule: </span>` +
+          formatTime(start) +
+          `
+                </div>
+                <div><span class="font-semibold">Company id: </span>
+                  <button class="btn" onclick="copy(this)">` +
+          company +
+          `         <i class="fa fa-copy"></i></button>
+                </div>
+                <div><span class="font-semibold">Customer id: </span>
+                  <button class="btn" onclick="copy(this)">` +
+          user +
+          `
+        <i class="fa fa-copy"></i></button>
+                </div>
+              </div>
+              <button class="btn bg-danger p-1 mx-2 hover:opacity-80 text-white font-bold rounded-xl self-center" onclick="deletePt('` +
+          company +
+          `')">
+                Delete
+              </button>
+            </div>
+          </div>`
+        );
+      };
+      const loadList = () => {
+        let tmp = "";
+        $(document).ready(function () {
+          if (pts !== undefined) {
+            pts.map((item, index) => {
+              tmp += makeItemPrenotation(
+                index,
+                item._id,
+                item.place,
+                item.start,
+                item.user,
+                item.company
+              );
+              totPrenotations = index + 1;
+            });
+          }
+          $("#ptsList").html(tmp);
+          $("#totPrenotations").html("TOTAL RESULTS: " + totPrenotations);
+          totPrenotations = 0;
+        });
+      };
+
+      const copy = (that) => {
+        var inp = document.createElement("input");
+        document.body.appendChild(inp);
+        inp.value = that.textContent.trim();
+        inp.select();
+        document.execCommand("copy", false);
+        inp.remove();
+      };
+
+      const showFilters = () => {
+        $("#prenotationsFilter").removeClass("hidden");
+        $("#showBtn").addClass("hidden");
+        $("#hideBtn").removeClass("hidden");
+        $("#resetBtn").removeClass("hidden");
+      };
+
+      const hideFilters = () => {
+        $("#prenotationsFilter").addClass("hidden");
+        $("#showBtn").removeClass("hidden");
+        $("#hideBtn").addClass("hidden");
+        $("#resetBtn").addClass("hidden");
+      };
+
+      const resetFilters = () => {
+        $("#filterPrenotationId").val("");
+        $("#filterCompanyId").val("");
+        $("#filterUserId").val("");
+        $("#filterSchedule").val("");
+        $("#filterCity").val("");
+        filterList();
+      };
+
+      getPts();
     </script>
   </head>
   <body>
@@ -30,11 +235,149 @@
         <div id="title" class="font-bold text-4xl sm:text-6xl m-4">
           PRENOTATIONS
         </div>
-        <div class="gray m-4 mb-1">
-          Click on a company or customer id to copy it!
-          <i class="fa fa-copy"></i>
+        <div class="flex flex-col mx-4 mb-1 flex-0">
+          <div class="gray">
+            Click on something followed by
+            <i class="fa fa-copy"></i> to copy it!
+          </div>
+          <div class="flex flex-row mt-2">
+            <button
+              id="showBtn"
+              class="hidden flex btn bg-save p-1 hover:opacity-80 text-white font-bold rounded mr-2"
+              onclick="showFilters()"
+            >
+              Show filters
+            </button>
+            <button
+              id="hideBtn"
+              class="flex btn bg-save p-1 hover:opacity-80 text-white font-bold rounded mr-2"
+              onclick="hideFilters()"
+            >
+              Hide filters
+            </button>
+            <button
+              id="resetBtn"
+              class="flex btn bg-secondary p-1 hover:opacity-80 text-white font-bold rounded"
+              onclick="resetFilters()"
+            >
+              Reset filters
+            </button>
+          </div>
         </div>
-        <div id="list" class="flex flex-1 m-4 mt-2"></div>
+        <div id="list" class="flex flex-1 m-4 mt-2">
+          <div class="flex flex-col flex-1">
+            <div id="prenotationsFilter" class="flex flex-col">
+              <!-- primo filtro-->
+              <div class="flex flex-col sm:flex-row">
+                <span class="flex">
+                  <label
+                    for="filterPrenotationId"
+                    class="flex self-center primary font-semibold"
+                    >Filter by prenotation id:</label
+                  >
+                </span>
+                <span>
+                  <input
+                    id="filterPrenotationId"
+                    name="filterPrenotationId"
+                    type="text"
+                    placeholder="ex. 63cecdc93b2ad296f8ed3989"
+                    class="px-1 m-1 rounded w-[15rem]"
+                    oninput="filterList()"
+                  />
+                </span>
+              </div>
+              <!-- secondo e terzo filtro-->
+              <div class="flex flex-col lg:flex-row">
+                <div class="flex flex-col sm:flex-row lg:mr-4">
+                  <span class="flex">
+                    <label
+                      for="filterCompanyId"
+                      class="flex self-center primary font-semibold"
+                      >Filter by company id:</label
+                    >
+                  </span>
+                  <span>
+                    <input
+                      id="filterCompanyId"
+                      name="filterCompanyId"
+                      type="text"
+                      placeholder="ex. 63c810b7a6a58c3116769cf9"
+                      class="px-1 m-1 rounded w-[15rem]"
+                      oninput="filterList()"
+                    />
+                  </span>
+                </div>
+                <div class="flex flex-col sm:flex-row lg:mr-4">
+                  <span class="flex">
+                    <label
+                      for="filterUserId"
+                      class="flex self-center primary font-semibold"
+                      >Filter by Customer id:</label
+                    >
+                  </span>
+                  <span>
+                    <input
+                      id="filterUserId"
+                      name="filterUserId"
+                      type="text"
+                      placeholder="ex. 635d00fdc77f11a1f22d313d"
+                      class="px-1 m-1 rounded w-[15rem]"
+                      oninput="filterList()"
+                    />
+                  </span>
+                </div>
+              </div>
+              <!-- quarto e quinto filtro-->
+              <div class="flex flex-col lg:flex-row">
+                <div class="flex flex-col sm:flex-row lg:mr-4">
+                  <span class="flex">
+                    <label
+                      for="filterSchedule"
+                      class="flex self-center primary font-semibold"
+                      >Filter by start time:</label
+                    >
+                  </span>
+                  <span>
+                    <input
+                      id="filterSchedule"
+                      name="filterSchedule"
+                      type="text"
+                      placeholder="ex. 9am"
+                      class="px-1 m-1 rounded w-[15rem]"
+                      oninput="filterList()"
+                    />
+                  </span>
+                </div>
+
+                <div class="flex flex-col sm:flex-row">
+                  <span class="flex">
+                    <label
+                      for="filterCity"
+                      class="flex self-center primary font-semibold"
+                      >Filter by City:
+                    </label>
+                  </span>
+                  <span>
+                    <input
+                      id="filterCity"
+                      name="filterCity"
+                      type="text"
+                      placeholder="ex. Torino"
+                      class="px-1 m-1 rounded w-[15rem]"
+                      oninput="filterList()"
+                    />
+                  </span>
+                </div>
+              </div>
+            </div>
+            <div
+              id="totPrenotations"
+              class="flex flex-col flex primary font-semibold mt-4 my-2"
+            ></div>
+            <div id="ptsList" class="flex flex-col flex-1"></div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
