--- a/server/src/back-office/views/prenotations.html
+++ b/server/src/back-office/views/prenotations.html
@@ -155,9 +155,14 @@
                 <div><span class="font-semibold">Customer id: </span>
                   <button class="btn" onclick="copy(this)">` +
           user +
-          `
-        <i class="fa fa-copy"></i></button>
+          `       <i class="fa fa-copy"></i></button>
                 </div>
+                <button id="showMore`+index+`" onclick="{$('#card`+index+`').removeClass('hidden'); $('#showMore`+index+`').addClass('hidden');$('#showLess`+index+`').removeClass('hidden')}" class="flex gray text-xs m-1"><u>Show more</u></button>
+                <div id="card`+index+`"class="hidden flex flex-col">
+                  CIAOO
+                  </div>
+                  <button id="showLess`+index+`" onclick="{$('#card`+index+`').addClass('hidden'); $('#showMore`+index+`').removeClass('hidden');$('#showLess`+index+`').addClass('hidden')}" class="flex hidden gray text-xs m-1"><u>Show less</u></button>
+
               </div>
               <button class="btn bg-danger p-1 mx-2 hover:opacity-80 text-white font-bold rounded-xl self-center" onclick="deletePt('` +
           company +
