--- a/server/src/back-office/views/companies.html
+++ b/server/src/back-office/views/companies.html
@@ -196,19 +196,30 @@
           name +
           `
                   </div>
-                  <div><span class="font-semibold">Company owner: </span>` +
-          owner +
-          `
+                  <div><span class="font-semibold">Field: </span>` +
+                    title +
+                  `
                   </div>
                   <div><span class="font-semibold">Email: </span>
                     <button class="btn" onclick="copy(this)">` +
           email +
           `         <i class="fa fa-copy"></i></button>
-                  </div>
-                  <div><span class="font-semibold">Field: </span>` +
-          title +
+                      </div>
+                        <div><span class="font-semibold">Company owner: </span>` +
+                owner +
           `
                   </div>
+                  <button id="showMore`+index+`" onclick="{$('#card`+index+`').removeClass('hidden'); $('#showMore`+index+`').addClass('hidden');$('#showLess`+index+`').removeClass('hidden')}" class="flex gray text-xs m-1"><u>Show more</u></button>
+                  <div id="card`+index+`"class="hidden flex flex-col">
+                    <div><span class="font-semibold">: </span>` +
+                    title +
+                  `
+                  </div>
+
+
+                  </div>
+                  <button id="showLess`+index+`" onclick="{$('#card`+index+`').addClass('hidden'); $('#showMore`+index+`').removeClass('hidden');$('#showLess`+index+`').addClass('hidden')}" class="flex hidden gray text-xs m-1"><u>Show less</u></button>
+
                 </div>
                 <button class="btn bg-danger p-1 mx-2 hover:opacity-80 text-white font-bold rounded-xl self-center" onclick="deleteCp('` +
           id +
@@ -218,7 +229,19 @@
               </div>
             </div>`
         );
-      };
+      };/*
+        photo: c.photo,
+        description: c.description,
+        cost_per_hour: c.cost_per_hour,
+        cities: c.cities,
+        prenotation: c.prenotation,
+        business_hours: c.business_hours,
+        email: c.email,
+        main_pets: c.main_pets,
+        study_info: c.study_info,
+        professional_experience: c.professional_experience,
+        actual_jobs: c.actual_jobs,
+        online: c.online,*/
       const loadCompanyList = () => {
         let tmp = "";
         $(document).ready(function () {
