added all company data and some filters

--- a/server/src/back-office/views/prenotations.html
+++ b/server/src/back-office/views/prenotations.html
@@ -312,7 +312,7 @@
                     <label
                       for="filterUserId"
                       class="flex self-center primary font-semibold"
-                      >Filter by Customer id:</label
+                      >Filter by customer id:</label
                     >
                   </span>
                   <span>
@@ -354,7 +354,7 @@
                     <label
                       for="filterCity"
                       class="flex self-center primary font-semibold"
-                      >Filter by City:
+                      >Filter by city:
                     </label>
                   </span>
                   <span>
