--- a/server/src/back-office/views/companies.html
+++ b/server/src/back-office/views/companies.html
@@ -52,16 +52,20 @@
       };
 
       const filterCompanyList = () => {
+        let reqCity = $("#filterCity").val();
         let reqCompany = $("#filterCompanyId").val();
         let reqEmail = $("#filterEmail").val();
-        let reqCost = $("#filterCost").val();
+        let reqMinCost = $("#filterMinCost").val();
+        let reqMaxCost = $("#filterMaxCost").val();
         let reqOwner = $("#filterOwner").val();
         let reqPet = $("#filterPet").val();
         let reqProfession = $("#filterProfession").val();
         let reqName = $("#filterName").val();
         let compareCompany = 0;
+        let compareCity = 0;
         let compareEmail = 0;
-        let compareCost = 0;
+        let compareMinCost = 0;
+        let compareMaxCost = 0;
         let compareOwner = 0;
         let comparePet = 0;
         let compareProfession = 0;
@@ -73,14 +77,18 @@
             companies.map((item) => {
               compareCompany =
                 reqCompany === "" ? 0 : item._id.includes(reqCompany) ? 0 : 1;
+              compareCity =
+                reqCity === "" ? 0 : showCities(item.cities).toLocaleLowerCase().includes(reqCity.toLocaleLowerCase()) ? 0 : 1; 
               compareName =
                 reqName === ""
                   ? 0
                   : item.name.toLowerCase().includes(reqName.toLowerCase())
                   ? 0
                   : 1;
-              compareCost =
-                reqCost === "" ? 0 : +reqCost <= +item.cost_per_hour ? 0 : 1;
+              compareMinCost =
+                reqMinCost === "" ? 0 : +reqMinCost <= +item.cost_per_hour ? 0 : 1;
+              compareMaxCost =
+                reqMaxCost === "" ? 0 : +reqMaxCost >= +item.cost_per_hour ? 0 : 1;
               compareProfession =
                 reqProfession === ""
                   ? 0
@@ -101,8 +109,10 @@
                   ? 0
                   : 1;
               if (
-                compareCompany +
-                  compareCost +
+                compareCity +
+                  compareCompany +
+                  compareMinCost +
+                  compareMaxCost +
                   compareEmail +
                   compareProfession +
                   compareOwner +
@@ -126,7 +136,8 @@
                   item.study_info,
                   item.professional_experience,
                   item.actual_jobs,
-                  item.photo
+                  item.photo,
+                  item.online
                 );
                 index++;
                 totCompanies = index;
@@ -142,7 +153,53 @@
           totCompanies = 0;
         });
       };
-
+      const showArray = (array) => {
+        let ret = "";
+        if (array !== undefined)
+          if (array.length > 0) {
+            array.map((item) => {
+              ret += item + ", ";
+            });
+            return ret.substring(0, ret.length - 2); // tolgo gli utili due caratteri ", "
+          } else return "-";
+      };
+      const showCities = (cities) => {
+        let ret = "";
+        if (cities !== undefined){
+            if(!ret.includes(cities.monday))
+              ret += cities.monday + ", ";
+            if(!ret.includes(cities.tuesday))
+              ret += cities.tuesday + ", ";
+            if(!ret.includes(cities.wednesday))
+              ret += cities.wednesday + ", ";
+            if(!ret.includes(cities.thursday))
+              ret += cities.thursday + ", ";
+            if(!ret.includes(cities.friday))
+              ret += cities.friday + ", ";
+            return ret.substring(0, ret.length - 2); // tolgo gli utili due caratteri ", "
+          } else return "-";
+      };
+      const isTrue = (data, msg) => {
+        if (data === true)
+          return `<span class="text-white bg-secondary ml-3 p-1 rounded text-xs">`+msg.toUpperCase()+`</span>`;
+        else return "";
+      };
+      const formatBusiness = (hours) => {
+        let ret = "";
+        ret += hours.start > 12 ? hours.start %12 + "pm" : hours.start + "am"
+        ret += " - "
+        ret += hours.end > 12 ? hours.end %12 + "pm" : hours.end + "am"
+        return ret
+      }
+      const bulletCities =(cities) => {
+        return `<div class="ml-4 text-sm">
+                  <div><span class="font-semibold">Monday: </span>`+cities.monday+`</div>
+                  <div><span class="font-semibold">Tuesday: </span>`+cities.tuesday+`</div>
+                  <div><span class="font-semibold">Wednesday: </span>`+cities.wednesday+`</div>
+                  <div><span class="font-semibold">Thursday: </span>`+cities.thursday+`</div>
+                  <div><span class="font-semibold">Friday: </span>`+cities.friday+`</div>
+                </div>`
+      }
       const makeItemCompany = (
         index,
         id,
@@ -159,7 +216,8 @@
         study_info,
         professional_experience,
         actual_jobs,
-        photo
+        photo,
+        online
       ) => {
         let title;
         switch (type) {
@@ -191,34 +249,76 @@
                     <button class="btn" onclick="copy(this)">` +
           id +
           `         <i class="fa fa-copy"></i></button>
+                <span class="font-semibold">` +
+          isTrue(online, "online") +
+          `
+                </span>
                   </div>
                   <div><span class="font-semibold">Company name: </span>` +
           name +
           `
                   </div>
-                  <div><span class="font-semibold">Field: </span>` +
-                    title +
-                  `
-                  </div>
                   <div><span class="font-semibold">Email: </span>
                     <button class="btn" onclick="copy(this)">` +
-          email +
-          `         <i class="fa fa-copy"></i></button>
+                      email +
+                      `         <i class="fa fa-copy"></i></button>
                       </div>
-                        <div><span class="font-semibold">Company owner: </span>` +
-                owner +
-          `
+                      <div><span class="font-semibold">Company owner: </span>` +
+                        owner +
+                        `         </div>
+                        <div><span class="font-semibold">Profession: </span>` +
+                title +
+                `
+                        </div>
+                  <button id="showMore` +
+          index +
+          `" onclick="{$('#card` +
+          index +
+          `').removeClass('hidden'); $('#showMore` +
+          index +
+          `').addClass('hidden');$('#showLess` +
+          index +
+          `').removeClass('hidden')}" class="flex gray text-xs m-1"><u>Show more</u></button>
+                  <div id="card` +
+          index +
+          `"class="hidden flex flex-col">
+                    <div><span class="font-semibold">Professional experience: </span>` +
+          showArray(professional_experience) +
+          `         </div>
+                  <div><span class="font-semibold">Actual jobs: </span>` +
+          showArray(actual_jobs) +
+          `       </div>
+                  <div><span class="font-semibold">Study info: </span>` +
+          showArray(study_info) +
+          `       </div>
+                  <div><span class="font-semibold">Main pets: </span>` +
+          showArray(main_pets) +
+          `       </div>
+          <div><span class="font-semibold">Cities: </span>` +
+          showCities(cities) +
+          `       </div>
+          <div>` +
+          bulletCities(cities) +
+          `       </div>
+          <div><span class="font-semibold">Description: </span>` +
+          description +
+          `         </div>
+          <div><span class="font-semibold">Schedules: </span>` +
+          formatBusiness(business_hours) +
+          `         </div>
+          <div><span class="font-semibold">Cost per hour: </span>` +
+          cost_per_hour +
+          `€/h</div>
                   </div>
-                  <button id="showMore`+index+`" onclick="{$('#card`+index+`').removeClass('hidden'); $('#showMore`+index+`').addClass('hidden');$('#showLess`+index+`').removeClass('hidden')}" class="flex gray text-xs m-1"><u>Show more</u></button>
-                  <div id="card`+index+`"class="hidden flex flex-col">
-                    <div><span class="font-semibold">: </span>` +
-                    title +
-                  `
-                  </div>
-
-
-                  </div>
-                  <button id="showLess`+index+`" onclick="{$('#card`+index+`').addClass('hidden'); $('#showMore`+index+`').removeClass('hidden');$('#showLess`+index+`').addClass('hidden')}" class="flex hidden gray text-xs m-1"><u>Show less</u></button>
+                  <button id="showLess` +
+          index +
+          `" onclick="{$('#card` +
+          index +
+          `').addClass('hidden'); $('#showMore` +
+          index +
+          `').removeClass('hidden');$('#showLess` +
+          index +
+          `').addClass('hidden')}" class="flex hidden gray text-xs m-1"><u>Show less</u></button>
 
                 </div>
                 <button class="btn bg-danger p-1 mx-2 hover:opacity-80 text-white font-bold rounded-xl self-center" onclick="deleteCp('` +
@@ -229,19 +329,7 @@
               </div>
             </div>`
         );
-      };/*
-        photo: c.photo,
-        description: c.description,
-        cost_per_hour: c.cost_per_hour,
-        cities: c.cities,
-        prenotation: c.prenotation,
-        business_hours: c.business_hours,
-        email: c.email,
-        main_pets: c.main_pets,
-        study_info: c.study_info,
-        professional_experience: c.professional_experience,
-        actual_jobs: c.actual_jobs,
-        online: c.online,*/
+      }; /*photo: c.photo,*/
       const loadCompanyList = () => {
         let tmp = "";
         $(document).ready(function () {
@@ -263,7 +351,8 @@
                 item.study_info,
                 item.professional_experience,
                 item.actual_jobs,
-                item.photo
+                item.photo,
+                item.online
               );
               totCompanies = index + 1;
             });
@@ -299,11 +388,14 @@
 
       const resetFilters = () => {
         $("#filterCompanyId").val("");
-        $("#filterCost").val("");
+        $("#filterMinCost").val("");
+        $("#filterMaxCost").val("");
         $("#filterOwner").val("");
         $("#filterEmail").val("");
         $("#filterPet").val("");
         $("#filterProfession").val("");
+        $("#filterName").val("");
+        $("#filterCity").val("");
         filterCompanyList();
       };
 
@@ -463,21 +555,62 @@
                 </div>
               </div>
               <!-- sesto e settimo filtro-->
-              <div class="flex flex-col lg:flex-row mb-2">
+              <div class="flex flex-col lg:flex-row">
                 <div class="flex flex-col sm:flex-row lg:mr-4">
                   <span class="flex">
                     <label
-                      for="filterCost"
+                      for="filterMinCost"
                       class="flex self-center primary font-semibold"
                       >Filter by minimum cost:</label
                     >
                   </span>
                   <span>
                     <input
-                      id="filterCost"
-                      name="filterCost"
+                      id="filterMinCost"
+                      name="filterMinCost"
                       type="text"
                       placeholder="ex. 34"
+                      class="px-1 m-1 rounded w-[15rem]"
+                      oninput="filterCompanyList()"
+                    />
+                  </span>
+                </div>
+                <div class="flex flex-col sm:flex-row">
+                  <span class="flex">
+                    <label
+                      for="filterMaxCost"
+                      class="flex self-center primary font-semibold"
+                      >Filter by maximum cost:
+                    </label>
+                  </span>
+                  <span>
+                    <input
+                      id="filterMaxCost"
+                      name="filterMaxCost"
+                      type="text"
+                      placeholder="ex. 58"
+                      class="px-1 m-1 rounded w-[15rem]"
+                      oninput="filterCompanyList()"
+                    />
+                  </span>
+                </div>
+              </div>
+              <!-- ottavo e nono filtro-->
+              <div class="flex flex-col lg:flex-row mb-2">
+                <div class="flex flex-col sm:flex-row lg:mr-4">
+                  <span class="flex">
+                    <label
+                      for="filterCity"
+                      class="flex self-center primary font-semibold"
+                      >Filter by city:</label
+                    >
+                  </span>
+                  <span>
+                    <input
+                      id="filterCity"
+                      name="filterCity"
+                      type="text"
+                      placeholder="ex. Torino"
                       class="px-1 m-1 rounded w-[15rem]"
                       oninput="filterCompanyList()"
                     />
