--- a/server/src/back-office/views/prenotations.html
+++ b/server/src/back-office/views/prenotations.html
@@ -231,11 +231,11 @@
         id="sidebar"
       ></div>
       <div class="flex flex-col w-full p-5 pt-0 ml-0 md:p-5 md:ml-[106px]">
-        <div id="title" class="font-bold text-4xl sm:text-6xl m-4">
+        <div id="title" class="font-bold text-4xl sm:text-6xl m-4 self-center">
           PRENOTATIONS
         </div>
         <div class="flex flex-col mx-4 mb-1 flex-0">
-          <div class="gray">
+          <div class="gray self-center">
             Click on something followed by
             <i class="fa fa-copy"></i> to copy it!
           </div>
