--- a/server/src/back-office/views/prenotations.html
+++ b/server/src/back-office/views/prenotations.html
@@ -40,9 +40,17 @@
         });
         window.location.reload();
       };
-      const filterStartTime = (time) => {
+      const filterStartEndTime = (time, end) => {
+        let hours = +time.substring(11, 13) + 1 + +end;
+        time = hours > 12 ? (hours % 12) + "pm" : hours + "am";
+        return time;
+      };
+
+      const formatTime = (time) => {
         let hours = +time.substring(11, 13) + 1;
         time = hours > 12 ? (hours % 12) + "pm" : hours + "am";
+        time += " - ";
+        time += hours + 1 > 12 ? ((hours + 1) % 12) + "pm" : hours + 1 + "am";
         return time;
       };
 
@@ -71,7 +79,7 @@
               compareSchedule =
                 reqSchedule === ""
                   ? 0
-                  : reqSchedule === filterStartTime(item.start)
+                  : reqSchedule === filterStartEndTime(item.start)
                   ? 0
                   : 1;
               compareCity =
@@ -111,14 +119,6 @@
         });
       };
 
-      const formatTime = (time) => {
-        let hours = +time.substring(11, 13) + 1;
-        time = hours > 12 ? (hours % 12) + "pm" : hours + "am";
-        time += " - ";
-        time += hours + 1 > 12 ? ((hours + 1) % 12) + "pm" : hours + 1 + "am";
-        return time;
-      };
-
       const makeItemPrenotation = (index, id, place, start, user, company) => {
         return (
           `
@@ -139,14 +139,40 @@
           place +
           `
                 </div>
-                <div><span class="font-semibold">Date: </span>` +
+                <div><span class="font-semibold">Date: </span><span class=tohidden`+index+`>` +
           start.substring(0, 10) +
-          `
-                </div>
-                <div><span class="font-semibold">Schedule: </span>` +
+          `     </span><input
+                type="text"
+                name="newDate"
+                id="newTimes`+index+`"
+                value="`+start.substring(0, 10)+`"
+                placeholder="Type new date"
+                class="toshow`+index+` hidden change px-1 rounded shadow-sm"
+              />
+            </div>
+                <div class="tohidden`+index+`"><span class="font-semibold">Schedule: </span>` +
           formatTime(start) +
-          `
-                </div>
+          `</div>
+          <div class="toshow`+index+` hidden"><span class="font-semibold">Start at: </span>
+            <input
+                type="text"
+                name="newStart"
+                id="newStart`+index+`"
+                value="`+ filterStartEndTime(start, 0)+`"
+                placeholder="Type new start time"
+                class="change px-1 rounded shadow-sm"
+              />
+          </div>
+          <div class="toshow`+index+` hidden"><span class="font-semibold">End at: </span>
+            <input
+                type="text"
+                name="newEnd"
+                id="newEnd`+index+`"
+                value="`+ filterStartEndTime(start, 1)+`"
+                placeholder="Type new end time"
+                class="change px-1 rounded shadow-sm"
+              />
+          </div>
                 <div><span class="font-semibold">Company id: </span>
                   <button class="btn" onclick="copy(this)">` +
           company +
@@ -158,11 +184,22 @@
           `       <i class="fa fa-copy"></i></button>
                 </div>
               </div>
-              <button class="btn bg-danger p-1 mx-2 hover:opacity-80 text-white font-bold rounded-xl self-center" onclick="deletePt('` +
+              <div class="flex flex-col self-center">
+              <button class="tohidden`+index+` btn bg-secondary p-1 m-2 hover:opacity-80 text-white font-bold rounded-xl self-center" onclick="{$('.tohidden`+index+`').addClass('hidden'); $('.toshow`+index+`').removeClass('hidden')}">
+                Change data
+              </button>
+              <button class="toshow`+index+` hidden btn bg-danger p-1 m-2 hover:opacity-80 text-white font-bold rounded-xl self-center" onclick="{$('.tohidden`+index+`').removeClass('hidden'); $('.toshow`+index+`').addClass('hidden')}">
+                CANCEL
+              </button>
+              <button class="toshow`+index+` hidden btn bg-save p-1 m-2 hover:opacity-80 text-white font-bold rounded-xl self-center" onclick="{$('.tohidden`+index+`').removeClass('hidden'); $('.toshow`+index+`').addClass('hidden')}">
+                SAVE
+              </button>
+              <button class="tohidden`+index+` btn bg-danger p-1 m-2 hover:opacity-80 text-white font-bold rounded-xl self-center" onclick="deletePt('` +
           company +
           `')">
                 Delete
               </button>
+              </div>
             </div>
           </div>`
         );
