some bug fix + admin and company login on bo

--- a/server/src/back-office/views/home.html
+++ b/server/src/back-office/views/home.html
@@ -13,6 +13,15 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script>
+      var user;
+
+      const setUser = async () => {
+        user = await isUserLogged()
+        console.log(user)
+        if(user === undefined)
+          window.location.href = "http://localhost:5000/b/views/login.html"
+      }
+
       $(document).ready(function () {
         $("#sidebar").load("../tabs/sidebar.html");
       });
@@ -66,7 +75,9 @@
             <button
             class="card-body hover:bg-opacity-50"
             style="padding-left: 3rem; padding-right: 3rem; padding-top:3rem; max-height: 18rem; max-width: 18rem; margin:0.5rem"
-            onclick=gotologin("`+item.href+`")
+            onclick=gotologin("` +
+            item.href +
+            `")
             >
         <img
         src=` +
@@ -87,13 +98,16 @@
       });
     </script>
   </head>
-  <body>
+  <body onload="setUser()">
     <div class="flex flex-col md:flex-row flex-1">
       <div
         class="md:fixed flex justify-center py-5 md:py-0 md:pl-5 self-center"
         id="sidebar"
       ></div>
-      <div class="flex w-full md:h-screen p-5 pt-0 ml-0 md:p-5 md:ml-[106px]" id="presentation">
+      <div
+        class="flex w-full md:h-screen p-5 pt-0 ml-0 md:p-5 md:ml-[106px]"
+        id="presentation"
+      >
         <div class="flex self-center flex-col w-full h-auto">
           <div class="flex flex-col text-center p-3 md:pb-6">
             <!-- TODO mettere if -> se admin Manage all your companies, se no va bene cosi-->
