--- a/server/src/back-office/views/customers.html
+++ b/server/src/back-office/views/customers.html
@@ -95,7 +95,7 @@
 				}
 				tmp !== ""
 				? $("#cstmrsList").html(tmp)
-				: $("#cstmrsList").html("No prenotations founded with these filters");
+				: $("#cstmrsList").html("No customer founded with these filters");
 				$("#totCustomers").html("TOTAL RESULTS: " + totCustomers);
 				totCustomers = 0;
 			});
